atualizacao v0.6
